# final_project_29.9

./: 2ba056c1-7fb9-453b-8f0a-e05224e5c58e.pkl  5eda9b64-fe3b-47e1-86b9-019794310788.pkl  832b8804-2949-49e4-a03c-16000f0a7f65.pkl  84c43817-b67a-446c-9c6b-6e56212beee0.pkl  File_Converter.py  File_Converter_Factory.py  classification_data.csv  classification_data.json  classification_data.xlsx  conftest.py  dal.py  e1c8eccb-a2f5-4c2a-88df-436f4c7402de.pkl  e6217988-d444-470b-a773-20f9f455a783.pkl  errors.py  main.py  model_factory.py  nlp_sentences.txt  preprocessoring_strategy.py  processing_facade.py  pyproject.toml  regression_data.csv  regression_data.json  regression_data.xlsx  requirements.txt  server.py  spacy_nlp.py  streamlit_gui.py  test_health_and_auth.py  test_models_listing.py  test_spacy_nlp.py  test_tokens_and_logs.py  test_upload_excel_and_json.py
models/: 011888cf-72e6-46d4-a99a-922ac2d14a29.pkl  0fb97fe7-e52a-4735-8be1-1d022874c52b.pkl  cf8bf782-3eb7-4440-ae87-9bc6ee7d49df.pkl
saved_models/: delivery_model.pkl
tests/: conftest.py  test_health_and_auth.py  test_models_listing.py  test_predict_endpoints.py  test_spacy_nlp.py  test_tokens_and_logs.py  test_train_and_predict_by_id.py  test_upload_excel_and_json.py
