[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-server"
version = "0.1.0"
description = "FastAPI ML server for training & prediction"
requires-python = ">=3.12"
readme = "README.md"
authors = [{name="Your Name"}]
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.31",
    "python-multipart>=0.0.9",
    "PyJWT>=2.8,<3",
    "passlib[bcrypt]>=1.7,<2",
    "bcrypt>=4.1,<5",
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "scikit-learn>=1.4,<1.6",
    "xgboost>=2.0,<3",
    "joblib>=1.3,<2",
    "openpyxl>=3.1,<4",
    "matplotlib>=3.8,<4",
    "httpx>=0.28,<0.29",
    "starlette>=0.37,<0.38",
    "tensorflow>=2.17,<2.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
